chore(menu): add menu doc blocks (#2970)
* feat(menu): add menu doc blocks

* feat(menu): update snapshot tests

* feat(menu): fix linting issues

* feat(menu): fix final linting errors

* feat(menu): Clean up docs

* feat(menu): Add subheader notes and clarify submenu positioning

* feat(menu): Update docs to call out selectable menus specifically

* feat(menu): Update tests

--- a/packages/design-system/shared/styles/doc.scss
+++ b/packages/design-system/shared/styles/doc.scss
@@ -11,6 +11,10 @@
   position: relative;
 }
 
+.docs-codeblock-source {
+  margin-bottom: 1.5rem;
+}
+
 .docs-codeblock-example + .docs-codeblock-source {
   border-top: 0;
 }
@@ -125,7 +129,7 @@ blockquote.doc {
   font-size: 1.125rem;
   font-weight: 300;
   padding: 1rem;
-  margin: 1.5rem 0;
+  margin: 0 0 1.5rem 0;
   border: 1px solid #f2f2f2;
   border-left-width: 0.125rem;
 
@@ -237,6 +241,10 @@ ul.doc-toc {
 
 li.doc > ul.doc, li.doc > li.doc, ul.doc > ul.doc, ul.doc > li.doc {
   margin-left: .4rem;
+}
+
+li.doc > ul.doc {
+  margin-bottom: 0;
 }
 
 .doc-toc > li.doc > ul.doc > li.doc a {
