fix(chat): sneak peak is now sneak peek w/breaking change (#3004)
* fix(chat): sneak peak is now sneak peek

Remove typo from chat component docs and JS, but it still remains in the CSS

* fix(chat): sneak peak is now sneak peek

CSS classes now reference sneak-peek instead of sneak-peak

BREAKING CHANGE: (class name) 'slds-chat-message__text-sneak-peak' is now 'slds-chat-message__text-sneak-peek'

* fix(chat): update snapshot test

* fix(chat): preserve both css classes for backwards compatibility

--- a/packages/design-system/ui/components/chat/base/_index.scss
+++ b/packages/design-system/ui/components/chat/base/_index.scss
@@ -244,13 +244,14 @@
 }
 
 /**
- * @summary Used when sneak peak is enabled for customer messages
+ * @summary Used when sneak peek is enabled for customer messages
  *
- * @selector .slds-chat-message__text_sneak-peak
+ * @selector .slds-chat-message__text_sneak-peek
  * @restrict .slds-chat-message__text
  * @modifier
  */
-.slds-chat-message__text_sneak-peak {
+.slds-chat-message__text_sneak-peak,
+.slds-chat-message__text_sneak-peek {
   font-style: italic;
 
   .slds-icon-typing {
