fix(input): Remove red box shadow from required inputs in Firefox (#3036)

--- a/packages/design-system/ui/components/input/base/_index.scss
+++ b/packages/design-system/ui/components/input/base/_index.scss
@@ -289,3 +289,11 @@
     color: $color-text-error;
   }
 }
+
+.slds-input:required {
+  box-shadow: none;
+}
+
+.slds-input:required:focus {
+  box-shadow: $shadow-button-focus;
+}
