feat(global header): Add global actions with animations (#3008)
* feat(global-header): componentize parts of global header and add new global actions component

* Begin docs

* Begin docs

* Add documentation and tests

* Revert export

* Update snapshots

* update snapshots

* Fix lint and tests

* Add annotations and updated tests

* Fix typos and deconstructed props

* Add rem function to px values, add copy regarding unread notifications

* Fix lint

* Change token ref to brand, update tests

* Add some documentation around notifications

* Add favorites popover and task menu

* Update snapshots

* Update menus component to take custom icon

* Lint

* Update snapshots

* Update snapshots

* Update snapshots

* Update snapshots

* Add accessibility note to new notifications

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -126,6 +126,7 @@
 
   // Global Header
   'global-header/base/index',
+  'global-header/global-actions/index',
   'global-header/notifications/index',
 
   // Global Navigation
