--- a/packages/design-system/ui/components/menus/dropdown/_index.scss
+++ b/packages/design-system/ui/components/menus/dropdown/_index.scss
@@ -76,7 +76,8 @@
   &_click,
   &--click {
 
-    .slds-dropdown {
+    .slds-dropdown,
+    &:hover .slds-dropdown {
       display: none;
     }
 
