--- a/packages/design-system/ui/components/select/_doc.scss
+++ b/packages/design-system/ui/components/select/_doc.scss
@@ -6,13 +6,12 @@
  * the menu are represented by `<option>` elements that you can group with
  * `<optgroup>` elements. You can pre-select options for the user.
  *
- * For a multiple options selections, adding the attribute `multiple` to
- * the `<select>` will enable this functionality. Note, if you need multiple
- * option selections, you will need to remove the
- * `<div class="slds-select_container">` from the DOM, otherwise you'll get
- * display issues.
+ * For selecting multiple options, we have created a custom component
+ * called the [Dueling Picklist](/components/dueling-picklist) to ensure
+ * Accessibility and ease-of-use. Please refer to that documentation for
+ * the interaction model, markup, and Accessibility requirements.
  *
- * @summary Select element presents a menu of options.
+ * @summary Select element presents a menu of options. For selecting multiple options, see Dueling Picklist.
  *
  * @base
  * @name select
