feat(tabs): New stacked tabs variant for Mobile and new DocBlocks (#3040)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -182,6 +182,7 @@
 
   // Tabs
   'tabs/base/index',
+  'tabs/mobile-stack/index',
   'scoped-tabs/base/index',
   'tabs/scrolling/index',
   'tabs/sub-tabs/index',
