feat(illustration): add empty state illustrations (#3041)
* feat(illustration): add illustration component

* feat(illustration): add empty state illustrations

* feat(illustration): remove vector-effect property

* feat(illustration): add addition svgs

* feat(illustration): fix lint error

* feat(illiustration): fix linter errors

* feat(illiustration): fix vnu errors

* feat(illustration): add classnames to svg elements

* feat(illustration): edit svg attributes

* feat(illustration): create docblocks

* feat(illustration): add snapshots

* feat(illustrations): update snapshots

* feat(illustration): add call to action variants and improve docs

* feat(illustrations): update snapshots

* chore(illustration): remove ids

chore(illustration): remove ids

* chore(illustration): clean up svgs

chore(illustration): update tests

* chore(illustration): update snapshots

* chore(illustration): use lorum ipsum

* chore(illustration): update tests

* chore(illustration): add tokens

* fix(illustration): doc fixes and text longform

fix(illustration): update tests

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -224,6 +224,9 @@
   // Expandable
   'expandable-section/base/index',
 
+  // Illustration
+  'illustration/base/index',
+
   // Regions
   'regions/base/index',
 
