feat(text): Add monospace font family (#3078)
* feat(text): Add monospace font family

* fix(text): remove code selector

* chore(text): add monospace example

--- a/packages/design-system/ui/utilities/text/_index.scss
+++ b/packages/design-system/ui/utilities/text/_index.scss
@@ -271,3 +271,13 @@
     }
   }
 }
+
+/**
+* @summary Monospace font family
+*
+* @selector .slds-text-font_monospace
+* @modifier
+*/
+.slds-text-font_monospace {
+  font-family: $font-family-monospace;
+}
