feat(visual-picker): add vertical variant (#3062)
* feat(visual-picker): add vertical variant

* fix(visual-picker): clean up and add tests

* chore(visual-picker): skip tests

* fix(visual-picker): switch to spacing-medium

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -154,6 +154,7 @@
   // Hero Buttons
   'visual-picker/coverable-content/index',
   'visual-picker/non-coverable-content/index',
+  'visual-picker/vertical/index',
 
   // Pills
   'pills/base/index',
