feat(popover): add warning and error variants (#3056)
* feat(popover): add warning and error variants

chore(popover): fix linter issues

* feat(popover): add nubbin colors

* chore(popover): add header id

* chore(popover): switch to error-dark

chore(popover): update snapshots

* chore(popover): change colors and padding

* feat(popover): add scrollable and flush modifiers

* chore(popover): remove tokens and update tests

* feat(popover): update scroll and create body classnames

chore(popover): switch to current color

* feat(popovers): change docked form footer example

* feat(popover): add new error popover to data table example

chore(popover): update popover tests

fix(popover): fix linter issues

* fix(popover): change popover id

* fix(popover): use correct icon

* chore(popover): clean up and update restriction rule

* fix(docked-form-footer): edit inline styles

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -92,6 +92,9 @@
   'popovers/nubbins/index',
   'popovers/walkthrough/index',
   'popovers/einstein/index',
+  'popovers/error/index',
+  'popovers/warning/index',
+
 
   // Tooltips
   'tooltips/base/index',
