--- a/packages/design-system/ui/components/popovers/einstein/_index.scss
+++ b/packages/design-system/ui/components/popovers/einstein/_index.scss
@@ -7,7 +7,7 @@
  * @summary Initializes a Einstein non-modal dialog
  *
  * @name einstein
- * @selector .slds-popover
+ * @selector .slds-popover_einstein
  * @restrict [role="dialog"], [role="tooltip"]
  * @variant
  */
